fix alignment for the `my department` dropdown

--- a/www/css/editing.css
+++ b/www/css/editing.css
@@ -20,16 +20,10 @@ a.mydepts {
     padding:3px 18px 3px 10px;
 }
 #mydeptlist {
-    float:right;
     background: #f7f7f7;
     border:1px solid #ededed;
-    border-radius:3px;
-    -moz-border-radius: 3px;
-    -webkit-border-radius:3px;
     margin-top:10px;
     position:absolute;
-    right:20px;
-    width:200px;
     padding:10px;
     z-index:9999;
 }
